<resources>
    <string name="app_name">SMART HOUSE</string>
    <string name="welcome">¡WELCOME!</string>
    <string name="come_in_to_your_home">Come in to your home</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">My Home</string>
    <string name="title_dashboard">Routines</string>
    <string name="title_devices">Devices</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="menu_0">Search</string>

    <string name="menu_1">Settings</string>
    <string name="menu_2">Help</string>
    <string name="help">Help</string>
    <string name="help1">This application works with the web page SMARTHOUSE. It shows the devices that can be controled and the rutines that can be activated</string>

    <string name="menu_3">About Us</string>
    <string name="aboutus">About Us</string>
    <string name="aboutus1">We are students from ITBA studying the subject HCI</string>
    <string name="aboutus2">Group 5:</string>
    <string name="aboutus3">Martin Edgardo Zahnd</string>
    <string name="aboutus4">Andrés Podgorny</string>
    <string name="aboutus5">Sol Victoria Anselmo</string>

    <string name="home_name">My Home</string>
    <string name="routines">My Routines</string>
    <string name="devices">My Devices</string>
    <string name="notifications">My Notifications</string>

    <string name="room_type">Bedroom %1$d</string>
    <string name="routine_name">Routine %1$d</string>

    <string name="device_type">Lamp %1$d</string>

    <string name="channel_name">Notifications</string>
    <string name="channel_description">Notifications Description</string>
    <string name="notification_title">Notification Title</string>
    <string name="notification_text">HELLO THERE, WELCOME TO SMARTHOUSE</string>

    <!-- Homes view -->
    <string name="home_apierror_msg">Could not access to My House\n\nTry again later</string>
    <string name="home_no_data">There are no rooms here!\n\nLet\'s add one!</string>
    <string name="routines_no_data">There are no routines here!\n\nLet\'s add one!</string>
    <string name="devices_no_data">There are no devices here!\n\nLet\'s add one!</string>

    <!-- Devices -->
    <string name="Screen_Devices">My Devices</string>
    <string name="switch1">Closed</string>
    <string name="switch2">Opened</string>
    <string name="switch3">On</string>
    <string name="switch4">Off</string>

    <string name="door0">Door</string>
    <string name="door1">Unlock</string>
    <string name="door2">Lock</string>

    <string name="fridge0">Fridge</string>
    <string name="fridge1">Temperature</string>
    <string name="fridge2">Temperature freezer</string>
    <string name="fridge3">Party</string>
    <string name="fridge4">Normal</string>
    <string name="fridge5">Holiday</string>

    <string name="oven0">Oven</string>
    <string name="oven1">Temperature</string>
    <string name="oven2">Low</string>
    <string name="oven3">High</string>
    <string name="oven4">Conventional</string>
    <string name="oven5">Grill</string>
    <string name="oven6">Convector</string>

    <string name="speaker1">Volume</string>
    <string name="speaker2">Paused</string>
    <string name="speaker3">Playlist</string>

    <string name="persiana0">Curtain</string>
    <string name="persiana1">Position</string>

    <string name="title_activity_settings">Settings</string>
    <string name="device_status_on">On</string>
    <string name="device_status_off">Off</string>

    <!-- Devices: Speaker -->
    <string name="device_speaker_generic_title">Speaker</string>
    <string name="device_speaker_volume">Volume</string>
    <string name="device_speaker_previous">Previous</string>
    <string name="device_speaker_next">Next</string>
    <string name="device_speaker_pause">Paused</string>
    <string name="device_speaker_play">Playing</string>
    <string name="device_speaker_stop">Stopped</string>
    <string name="device_speaker_playing_now">Playing now</string>
    <string name="device_speaker_playlist">Playlist</string>

    <!-- Preference Titles -->
    <string name="languages">Choose Your Language Preference</string>
    <string name="mode">Chose Your Visibility Mode Preference</string>

    <!-- Messages Preferences -->
    <string name="language1">English</string>
    <string name="language2">Español</string>

    <!-- Sync Preferences -->
    <string name="mode1">DARK</string>
    <string name="mode2">LIGHT</string>

</resources>