<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_home"

        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_marginStart="35dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="20dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_name_text" />

    <ProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyleLarge"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:indeterminate="true"
        android:visibility="visible"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_name_text" />

    <TextView
        android:id="@+id/empty"
        style="@style/NoDataMessage"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/home_no_data"
        android:visibility="gone"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_name_text" />

    <TextView
        android:id="@+id/api_error_message"
        style="@style/ErrorMessage"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_apierror_msg"

        android:visibility="gone"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/home_name_text" />

    <TextView
        android:id="@+id/home_name_text"

        style="@style/ScreenTitle"

        android:text="@string/home_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>