<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.devices.device.Oven">

    <TextView
        android:id="@+id/device_title"
        style="@style/DeviceNameText"
        android:layout_marginTop="60dp"

        android:text="Horno"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="50dp"
        android:layout_height="40dp"

        android:layout_gravity="center"

        android:layout_marginTop="68dp"
        android:layout_weight="1"
        android:background="@color/transparent"
        app:icon="@drawable/ic_baseline_star_outline_24"
        app:iconGravity="top"

        app:iconSize="35dp"
        app:iconTint="?android:textColorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/device_oven_title"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/device_oven_image"
        style="@style/DeviceImage"

        android:src="@drawable/oven_bw"
        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/device_title" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/device_oven_switch"

        style="@style/DeviceTextBody"

        android:layout_width="wrap_content"
        android:layout_height="52dp"

        android:layout_marginTop="8dp"

        android:text="@string/switch4"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/device_oven_image" />

    <LinearLayout
        android:id="@+id/device_oven_actions_layout"

        android:layout_width="345dp"
        android:layout_height="340dp"

        android:layout_marginStart="35dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="35dp"


        android:layout_weight="10"

        android:orientation="vertical"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/device_oven_switch"
        app:layout_constraintVertical_bias="0.2">

        <LinearLayout
            android:id="@+id/device_oven_temp_layout1"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <com.google.android.material.slider.Slider
                    android:id="@+id/device_oven_slider_temp"

                    android:layout_width="0dp"
                    android:layout_height="32dp"

                    android:layout_gravity="center"

                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"

                    android:stepSize="1"
                    android:valueFrom="0"
                    android:valueTo="100"
                    app:labelBehavior="floating"
                    app:labelStyle="@style/DeviceSliderTooltip"
                    app:tickVisible="false" />

                <TextView
                    android:id="@+id/device_fridge_slider_temp_indicator"

                    style="@style/DeviceTextBody"

                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"

                    android:layout_weight="0"
                    android:gravity="center"

                    android:text="27%" />
            </LinearLayout>

            <TextView
                android:id="@+id/device_fridge_slider_temp_hint"

                style="@style/DeviceTextSubtitle"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center"

                android:text="@string/oven1"
                android:textAlignment="center" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2" />

        <LinearLayout
            android:id="@+id/device_oven_types_layout"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/device_oven_types_layout1"

                android:layout_width="108dp"
                android:layout_height="wrap_content"

                android:orientation="vertical">

                <ImageButton
                    android:layout_width="76dp"
                    android:layout_height="76dp"
                    android:layout_gravity="center"

                    android:background="@drawable/roundcorner"
                    android:gravity="center"
                    android:padding="15dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/oven_mode_down_bw"

                    app:tint="@color/black" />

                <TextView
                    android:id="@+id/device_oven_types_hint1"

                    style="@style/DeviceTextSubtitle"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center"

                    android:text="@string/oven2"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/device_oven_types_layout2"

                android:layout_width="127dp"
                android:layout_height="wrap_content"

                android:orientation="vertical">

                <ImageButton
                    android:layout_width="76dp"
                    android:layout_height="76dp"
                    android:layout_gravity="center"

                    android:background="@drawable/roundcorner"
                    android:gravity="center"
                    android:padding="15dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/oven_mode_common_bw"

                    app:tint="@color/black" />

                <TextView
                    android:id="@+id/device_oven_types_hint2"

                    style="@style/DeviceTextSubtitle"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center"

                    android:text="@string/oven4"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/device_oven_types_layout3"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical">

                <ImageButton
                    android:layout_width="76dp"
                    android:layout_height="76dp"
                    android:layout_gravity="center"

                    android:background="@drawable/roundcorner"
                    android:gravity="center"
                    android:padding="15dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/oven_mode_up_bw"

                    app:tint="@color/black" />

                <TextView
                    android:id="@+id/device_oven_types_hint3"

                    style="@style/DeviceTextSubtitle"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center"

                    android:text="@string/oven3"
                    android:textAlignment="center" />
            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2" />

        <LinearLayout
            android:id="@+id/device_oven_types2_layout"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/device_oven_types2_layout1"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:orientation="vertical">

                <ImageButton
                    android:layout_width="76dp"
                    android:layout_height="76dp"
                    android:layout_gravity="center"

                    android:background="@drawable/roundcorner"
                    android:gravity="center"
                    android:padding="15dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/grill_bw"

                    app:tint="@color/black" />

                <TextView
                    android:id="@+id/device_oven_types2_hint1"

                    style="@style/DeviceTextSubtitle"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center"

                    android:text="@string/oven5"
                    android:textAlignment="center" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/device_oven_types2_layout4"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:orientation="vertical">

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="189dp"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="89dp"
                tools:layout_editor_absoluteY="687dp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="2" />

                <Spinner
                    android:id="@+id/spinner2"
                    android:layout_width="189dp"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="89dp"
                    tools:layout_editor_absoluteY="687dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/device_oven_types2_layout2"

                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                android:orientation="vertical">

                <ImageButton
                    android:layout_width="76dp"
                    android:layout_height="76dp"
                    android:layout_gravity="center"

                    android:background="@drawable/roundcorner"
                    android:gravity="center"
                    android:padding="15dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/convector_bw"

                    app:tint="@color/black" />

                <TextView
                    android:id="@+id/device_oven_types2_hint2"

                    style="@style/DeviceTextSubtitle"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center"

                    android:text="@string/oven6"
                    android:textAlignment="center" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


    >

</androidx.constraintlayout.widget.ConstraintLayout>